--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,3 +1,6 @@
 {
-  "message": "hello i18n !!"
+  "main": {
+    "welcome": "Welcome from {company}!",
+    "messages": " 0 messages | 1 message | {count} messages"
+  }
 }
